tests/ui/impl-trait/defining-use-captured-non-universal-region.statik.stderr
error[E0792]: expected generic lifetime parameter, found `'static`
  --> $DIR/defining-use-captured-non-universal-region.rs:9:18
   |
LL | fn foo<'a>() -> impl Sized + 'a {
   |                              -- cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
LL |     #[cfg(statik)]
LL |     let i: i32 = foo::<'static>();
   |                  ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
